# OmniParser

./: README.md  pyproject.toml  s3_inspector.py
omnitool/omniparserserver/: omniparserserver.py
util/: omniparser.py  utils.py
